Update contact information and enhance responsive design - Update phone to +1 (425) 381-3925 and email to chengmu2010@hotmail.com - Change address to 杭州、香港、西雅图 - Remove seal icon and checkout section - Improve responsive design with consistent font sizes and viewport settings - Fix mobile/desktop display consistency

--- a/collection.html
+++ b/collection.html
@@ -2,13 +2,14 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>藏品展示 - 讀畫樓</title>
     <meta name="description" content="讀畫樓藏品展示">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 导航栏 -->
@@ -54,9 +55,9 @@
                 </div>
                 <div class="footer-contact">
                     <h4>联系方式</h4>
-                    <p>电话：010-12345678</p>
-                    <p>邮箱：info@duhualou.com</p>
-                    <p>地址：北京市朝阳区艺术文化区</p>
+                    <p>电话：+1 (425) 381-3925</p>
+                    <p>邮箱：chengmu2010@hotmail.com</p>
+                    <p>地址：杭州、香港、西雅图</p>
                 </div>
             </div>
             <div class="footer-bottom">
