--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>讀畫樓 - 东方美韵艺术画廊</title>
     <meta name="description" content="展现文化底蕴、深层精神追求，跨越历史长河展示东方美韵的藝術畫廊">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 导航栏 -->
@@ -34,8 +34,8 @@
     <!-- 英雄区域 -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>讀畫樓</h1>
-            <p>讀畫樓是個崇尚<br>中國文人精神和生活情趣的地方</p>
+            <div class="hero-title">讀畫樓</div>
+            <div class="hero-subtitle">讀畫樓是個崇尚中國文人精神和生活情趣的地方</div>
             <button class="cta-button">探索藏品</button>
         </div>
     </section>
@@ -96,13 +96,13 @@
           <div class="academic-info-title">学术分享</div>
           <div class="academic-info-desc">
             专业考古团队与权威机构合作，深入解读每件藏品的历史与艺术。
-          </div>
+            </div>
           <div class="academic-info-list">
             <a href="https://www.dha.ac.cn/" target="_blank">▸ 敦煌研究院</a>
             <a href="https://www.dpm.org.cn/" target="_blank">▸ 北京故宫博物院</a>
             <a href="https://www.npm.gov.tw/" target="_blank">▸ 台北故宫博物院</a>
-          </div>
-        </div>
+                </div>
+                </div>
         <div class="academic-info-box">
           <div class="academic-info-title">艺术品资讯</div>
           <div class="academic-info-desc">
@@ -112,9 +112,9 @@
             <a href="https://www.sothebys.com/zh" target="_blank">▸ 苏富比</a>
             <a href="https://www.christies.com/zh" target="_blank">▸ 佳士得</a>
             <a href="https://www.polypm.com.cn/" target="_blank">▸ 保利拍卖</a>
-          </div>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
 
     <!-- 联系我们 -->
@@ -129,8 +129,8 @@
                     <h3>参观信息</h3>
                     <p><strong>地址：</strong>杭州、香港、西雅图</p>
                     <p><strong>开放时间：</strong>周二至周日 9:00-17:00</p>
-                    <p><strong>电话：</strong>010-12345678</p>
-                    <p><strong>邮箱：</strong>info@duhualou.com</p>
+                    <p><strong>电话：</strong>+1 (425) 381-3925</p>
+                    <p><strong>邮箱：</strong>chengmu2010@hotmail.com</p>
                 </div>
                 <div class="contact-form scroll-reveal">
                     <h3>预约参观</h3>
@@ -172,9 +172,9 @@
                 </div>
                 <div class="footer-contact">
                     <h4>联系方式</h4>
-                    <p>电话：010-12345678</p>
-                    <p>邮箱：info@duhualou.com</p>
-                    <p>地址：北京市朝阳区艺术文化区</p>
+                    <p>电话：+1 (425) 381-3925</p>
+                    <p>邮箱：chengmu2010@hotmail.com</p>
+                    <p>地址：杭州、香港、西雅图</p>
                 </div>
             </div>
             <div class="footer-bottom">
