Add Chinese calligraphy and painting collection page with updated design and contact information

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <div class="title-decoration"></div>
             </div>
             <div class="category-gallery">
-                <a class="category-card" href="#collection">
-                    <img src="assets/images/song-white-jar.JPG" alt="中国书画" class="category-img">
+                <a class="category-card" href="calligraphy-painting.html">
+                    <img src="assets/images/chinese-dragon-calligraphy.JPG" alt="中国书画" class="category-img">
                     <div class="category-title">中国书画</div>
                 </a>
                 <a class="category-card" href="collection.html">
@@ -130,7 +130,7 @@
                     <p><strong>地址：</strong>杭州、香港、西雅图</p>
                     <p><strong>开放时间：</strong>周二至周日 9:00-17:00</p>
                     <p><strong>电话：</strong>+1 (425) 381-3925</p>
-                    <p><strong>邮箱：</strong>chengmu2010@hotmail.com</p>
+                    <p><strong>邮箱：</strong>allison@read-gallery.com</p>
                 </div>
                 <div class="contact-form scroll-reveal">
                     <h3>预约参观</h3>
@@ -173,7 +173,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p>电话：+1 (425) 381-3925</p>
-                    <p>邮箱：chengmu2010@hotmail.com</p>
+                    <p>邮箱：allison@read-gallery.com</p>
                     <p>地址：杭州、香港、西雅图</p>
                 </div>
             </div>
