--- a/collection.html
+++ b/collection.html
@@ -56,7 +56,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p>电话：+1 (425) 381-3925</p>
-                    <p>邮箱：chengmu2010@hotmail.com</p>
+                    <p>邮箱：allison@read-gallery.com</p>
                     <p>地址：杭州、香港、西雅图</p>
                 </div>
             </div>
@@ -67,5 +67,6 @@
     </footer>
     <script src="js/animations.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 </html> 
