--- a/collection.html
+++ b/collection.html
@@ -66,7 +66,7 @@
         </div>
     </footer>
     <script src="js/animations.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=202410170130"></script>
 
 </body>
 </html> 
