--- a/index.html
+++ b/index.html
@@ -184,6 +184,6 @@
     </footer>
 
     <script src="js/animations.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=202410170130"></script>
 </body>
 </html
