Add cache-busting for chizhouyao jar.JPG
- Added cache-busting parameters to chizhouyao jar.JPG references
- Updated js/main.js and artwork/11.html
- Updated JavaScript file references in HTML files
- Ensures browser loads updated chizhouyao jar image without cache issues

--- a/artwork/11.html
+++ b/artwork/11.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../index.html#collection">← Back to Collection</a>
-        <img class="artwork-detail-img" src="../assets/images/chizhouyao jar.JPG" alt="chizhouyao jar">
+        <img class="artwork-detail-img" src="../assets/images/chizhouyao jar.JPG?v=202410170130" alt="chizhouyao jar">
         <div class="artwork-detail-title">chizhouyao jar</div>
         <div class="artwork-detail-meta">—</div>
         <div class="artwork-detail-desc">
