Force GitHub Pages cache refresh by renaming image files
- Renamed chizhouyao jar.JPG to chizhouyao-jar-new.JPG
- Renamed cizhouyao-wrist-pillow.JPG to cizhouyao-wrist-pillow-new.JPG
- Updated all references in js/main.js and HTML files
- Updated JavaScript file references with new timestamp
- Forces GitHub Pages to treat images as completely new files

--- a/artwork/12.html
+++ b/artwork/12.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../index.html#collection">← Back to Collection</a>
-        <img class="artwork-detail-img" src="../assets/images/cizhouyao-wrist-pillow.JPG?v=202410170130" alt="cizhouyao-wrist-pillow">
+        <img class="artwork-detail-img" src="../assets/images/cizhouyao-wrist-pillow-new.JPG" alt="cizhouyao-wrist-pillow">
         <div class="artwork-detail-title">cizhouyao-wrist-pillow</div>
         <div class="artwork-detail-meta">—</div>
         <div class="artwork-detail-desc">
