Update artwork 1: Change title and description
- Changed title from '宋代白釉罐' to '北宋白釉梅瓶'
- Updated description to '出自中国山西忻州，雕工朴成，纹饰富贵！'
- Updated page title and alt text accordingly

--- a/artwork/1.html
+++ b/artwork/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>宋代白釉罐 - 藏品详情</title>
+    <title>北宋白釉梅瓶 - 藏品详情</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/components.css">
@@ -91,11 +91,11 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../index.html#collection">← 返回藏品列表</a>
-        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="宋代白釉罐">
-        <div class="artwork-detail-title">宋代白釉罐</div>
+        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="北宋白釉梅瓶">
+        <div class="artwork-detail-title">北宋白釉梅瓶</div>
         <div class="artwork-detail-meta">宋代 · 白釉刻花 · 高28cm 口径12cm</div>
         <div class="artwork-detail-desc">
-            此罐为宋代白釉刻花瓷器，釉色温润，胎体坚致，罐身刻划花卉纹饰，线条流畅自然，体现了宋代瓷器工艺的高超水平，是宋瓷中的经典代表。
+            出自中国山西忻州，雕工朴成，纹饰富贵！
         </div>
         <div class="artwork-detail-nav">
             <a href="21.html">← 上一件</a>
