Update artwork 1 description with more detailed information
- Changed description to: '存世稀有的北宋白釉瓶，确切出自中国山西忻州，采用高浮牡丹纹刻划雕工'
- Provides more specific details about rarity, origin, and carving technique
- Emphasizes the high-relief peony pattern carving work

--- a/artwork/1.html
+++ b/artwork/1.html
@@ -98,7 +98,7 @@
         <div class="artwork-detail-title">北宋白釉梅瓶</div>
         <div class="artwork-detail-meta">宋代 · 白釉刻花 · 高28cm 口径12cm</div>
         <div class="artwork-detail-desc">
-            出自中国山西忻州，雕工朴成，纹饰富贵！
+            存世稀有的北宋白釉瓶，确切出自中国山西忻州，采用高浮牡丹纹刻划雕工
         </div>
         <div class="artwork-detail-nav">
             <a href="21.html">← 上一件</a>
