Update artwork 2: Change title and description for neolithic-pot.JPG
- Changed title to: 【马家窑彩陶漩涡纹双耳瓶】
- Updated description to: '直颈，唇口、平底，颈腹有两只扁平竖耳，繪有黑彩璇涡纹，线条流畅，似水奔流不息。'
- Updated js/main.js with new title and description
- Updated page title and alt text accordingly

--- a/artwork/2.html
+++ b/artwork/2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新石器时代彩陶罐 - 藏品详情</title>
+    <title>【马家窑彩陶漩涡纹双耳瓶】 - 藏品详情</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/components.css">
@@ -39,11 +39,11 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../index.html#collection">← 返回藏品列表</a>
-        <img class="artwork-detail-img" src="../assets/images/neolithic-pot.JPG" alt="新石器时代彩陶罐">
-        <div class="artwork-detail-title">新石器时代彩陶罐</div>
+        <img class="artwork-detail-img" src="../assets/images/neolithic-pot.JPG" alt="【马家窑彩陶漩涡纹双耳瓶】">
+        <div class="artwork-detail-title">【马家窑彩陶漩涡纹双耳瓶】</div>
         <div class="artwork-detail-meta">新石器时代 · 彩陶 · 高32cm 口径18cm</div>
         <div class="artwork-detail-desc">
-            此罐为新石器时代彩陶器，器型饱满，肩部绘有旋涡纹与带状纹饰，色彩对比鲜明，展现了史前先民的艺术创造力。
+            直颈，唇口、平底，颈腹有两只扁平竖耳，繪有黑彩璇涡纹，线条流畅，似水奔流不息。
         </div>
         <div class="artwork-detail-nav">
             <a href="1.html">← 上一件</a>
