Fix navigation: Update '返回藏品列表' links to point to collection.html
- Changed all artwork detail pages' '返回藏品列表' links from '../index.html#collection' to '../collection.html'
- This ensures users return to the actual collection list instead of the category selection page
- Fixes navigation flow: Category → Collection List → Artwork Detail → Collection List
- Updated all 23 artwork detail pages (artwork/1.html through artwork/23.html)

--- a/artwork/11.html
+++ b/artwork/11.html
@@ -30,7 +30,7 @@
             <ul class="nav-links">
                 <li><a href="../index.html#home" class="nav-link">首页</a></li>
                 <li><a href="../index.html#about" class="nav-link">讀畫樓介紹</a></li>
-                <li><a href="../index.html#collection" class="nav-link">藏品展示</a></li>
+                <li><a href="../collection.html" class="nav-link">藏品展示</a></li>
                 <li><a href="../index.html#features" class="nav-link">特色功能</a></li>
                 <li><a href="../index.html#contact" class="nav-link">联系我们</a></li>
                 <li><a href="../index.html#visit" class="nav-link">参观预约</a></li>
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <div class="artwork-detail-container">
-        <a class="artwork-detail-back" href="../index.html#collection">← Back to Collection</a>
+        <a class="artwork-detail-back" href="../collection.html">← Back to Collection</a>
         <img class="artwork-detail-img" src="../assets/images/chizhouyao-jar-new.JPG" alt="chizhouyao jar">
         <div class="artwork-detail-title">chizhouyao jar</div>
         <div class="artwork-detail-meta">—</div>
