--- a/artwork/4.html
+++ b/artwork/4.html
@@ -30,7 +30,7 @@
             <ul class="nav-links">
                 <li><a href="../index.html#home" class="nav-link">首页</a></li>
                 <li><a href="../index.html#about" class="nav-link">讀畫樓介紹</a></li>
-                <li><a href="../index.html#collection" class="nav-link">藏品展示</a></li>
+                <li><a href="../collection.html" class="nav-link">藏品展示</a></li>
                 <li><a href="../index.html#features" class="nav-link">特色功能</a></li>
                 <li><a href="../index.html#contact" class="nav-link">联系我们</a></li>
                 <li><a href="../index.html#visit" class="nav-link">参观预约</a></li>
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <div class="artwork-detail-container">
-        <a class="artwork-detail-back" href="../index.html#collection">← 返回藏品列表</a>
+        <a class="artwork-detail-back" href="../collection.html">← 返回藏品列表</a>
         <img class="artwork-detail-img" src="../assets/images/sancai-jar.JPG" alt="唐三彩兽足罐">
         <div class="artwork-detail-title">唐三彩兽足罐</div>
         <div class="artwork-detail-meta">唐代 · 三彩陶 · 高28cm 口径20cm</div>
