Unify artwork 1 title to 【宋代白釉瓶】
- Updated js/main.js title from 【北宋白釉瓶】 to 【宋代白釉瓶】
- Updated artwork/1.html page title, alt text, and display title
- Ensures consistency across all references to this artwork
- Maintains the updated description about Shanxi Xinzhou origin

--- a/artwork/1.html
+++ b/artwork/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>【北宋白釉瓶】 - 藏品详情</title>
+    <title>【宋代白釉瓶】 - 藏品详情</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -94,8 +94,8 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../collection.html">← 返回藏品列表</a>
-        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="【北宋白釉瓶】">
-        <div class="artwork-detail-title">【北宋白釉瓶】</div>
+        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="【宋代白釉瓶】">
+        <div class="artwork-detail-title">【宋代白釉瓶】</div>
         <div class="artwork-detail-meta">宋代 · 白釉刻花 · 高28cm 口径12cm</div>
         <div class="artwork-detail-desc">
             存世稀有的北宋白釉瓶，出自中国山西忻州，采用高浮雕工刻划牡丹纹，气象浑朴。
