--- a/calligraphy-painting.html
+++ b/calligraphy-painting.html
@@ -225,7 +225,7 @@
                     <ul>
                         <li><a href="index.html#home">首页</a></li>
                         <li><a href="index.html#about">讀畫樓介紹</a></li>
-                        <li><a href="collection.html">藏品展示</a></li>
+                        <li><a href="index.html#collection">藏品分类</a></li>
                         <li><a href="index.html#features">特色功能</a></li>
                     </ul>
                 </div>
