--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav-links">
                 <li><a href="#home" class="nav-link">首页</a></li>
                 <li><a href="#about" class="nav-link">讀畫樓介紹</a></li>
-                <li><a href="#collection" class="nav-link">藏品展示</a></li>
+                <li><a href="#collection" class="nav-link">藏品分类</a></li>
                 <li><a href="#features" class="nav-link">特色功能</a></li>
                 <li><a href="#contact" class="nav-link">联系我们</a></li>
                 <li><a href="#visit" class="nav-link">参观预约</a></li>
@@ -166,7 +166,7 @@
                     <ul>
                         <li><a href="#home">首页</a></li>
                         <li><a href="#about">讀畫樓介紹</a></li>
-                        <li><a href="#collection">藏品展示</a></li>
+                        <li><a href="#collection">藏品分类</a></li>
                         <li><a href="#features">特色功能</a></li>
                     </ul>
                 </div>
