--- a/artwork/1.html
+++ b/artwork/1.html
@@ -73,6 +73,59 @@
             text-decoration: underline;
             cursor: pointer;
         }
+        .artwork-detail-img {
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .artwork-detail-img:hover {
+            transform: scale(1.02);
+        }
+        /* 模态框样式 */
+        .image-modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            animation: fadeIn 0.3s ease;
+        }
+        .image-modal-content {
+            width: auto;
+            height: auto;
+            min-width: 400px;
+            min-height: 400px;
+            max-width: 95vw;
+            max-height: 95vh;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+        }
+        .image-modal-close {
+            position: absolute;
+            top: 20px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 1001;
+        }
+        .image-modal-close:hover {
+            color: #ccc;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
     </style>
 </head>
 <body style="background: var(--song-paper);">
@@ -94,7 +147,7 @@
     </nav>
     <div class="artwork-detail-container">
         <a class="artwork-detail-back" href="../collection.html">← 返回藏品列表</a>
-        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="【宋代白釉瓶】">
+        <img class="artwork-detail-img" src="../assets/images/song-white-jar.JPG" alt="【宋代白釉瓶】" onclick="openImageModal(this.src, this.alt)">
         <div class="artwork-detail-title">【宋代白釉瓶】</div>
         <div class="artwork-detail-meta">宋代 · 白釉刻花 · 高28cm 口径12cm</div>
         <div class="artwork-detail-desc">
@@ -105,5 +158,13 @@
             <a href="2.html">下一件 →</a>
         </div>
     </div>
+
+    <!-- 图片模态框 -->
+    <div id="imageModal" class="image-modal">
+        <span class="image-modal-close" onclick="closeImageModal()">×</span>
+        <img class="image-modal-content" id="modalImage">
+    </div>
+
+    <script src="../js/image-modal.js"></script>
 </body>
 </html> 
