--- a/artwork/22.html
+++ b/artwork/22.html
@@ -10,6 +10,61 @@
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        .artwork-img-large {
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .artwork-img-large:hover {
+            transform: scale(1.02);
+        }
+        /* 模态框样式 */
+        .image-modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            animation: fadeIn 0.3s ease;
+        }
+        .image-modal-content {
+            width: auto;
+            height: auto;
+            min-width: 400px;
+            min-height: 400px;
+            max-width: 95vw;
+            max-height: 95vh;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+        }
+        .image-modal-close {
+            position: absolute;
+            top: 20px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 1001;
+        }
+        .image-modal-close:hover {
+            color: #ccc;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+    </style>
 </head>
 <body>
     <!-- 导航栏 -->
@@ -34,7 +89,7 @@
         <div class="container">
             <div class="artwork-detail">
                 <div class="artwork-image-large">
-                    <img src="../assets/images/chinese-dragon-calligraphy.JPG" alt="龙字书法" class="artwork-img-large">
+                    <img src="../assets/images/chinese-dragon-calligraphy.JPG" alt="龙字书法" class="artwork-img-large" onclick="openImageModal(this.src, this.alt)">
                 </div>
                 <div class="artwork-info-detail">
                     <h1 class="artwork-title-large">《龙字书法》</h1>
@@ -84,5 +139,12 @@
         </div>
     </footer>
     <script src="../js/animations.js"></script>
+    <!-- 图片模态框 -->
+    <div id="imageModal" class="image-modal">
+        <span class="image-modal-close" onclick="closeImageModal()"></body>×</span>
+        <img class="image-modal-content" id="modalImage">
+    </div>
+
+    <script src="../js/image-modal.js"></script>
 </body>
 </html> 
