--- a/collection.html
+++ b/collection.html
@@ -22,7 +22,7 @@
             <ul class="nav-links">
                 <li><a href="index.html#home" class="nav-link">首页</a></li>
                 <li><a href="index.html#about" class="nav-link">讀畫樓介紹</a></li>
-                <li><a href="collection.html" class="nav-link">藏品展示</a></li>
+                <li><a href="index.html#collection" class="nav-link">藏品分类</a></li>
                 <li><a href="index.html#features" class="nav-link">特色功能</a></li>
                 <li><a href="index.html#contact" class="nav-link">联系我们</a></li>
                 <li><a href="index.html#visit" class="nav-link">参观预约</a></li>
@@ -49,7 +49,7 @@
                     <ul>
                         <li><a href="index.html#home">首页</a></li>
                         <li><a href="index.html#about">讀畫樓介紹</a></li>
-                        <li><a href="collection.html">藏品展示</a></li>
+                        <li><a href="index.html#collection">藏品分类</a></li>
                         <li><a href="index.html#features">特色功能</a></li>
                     </ul>
                 </div>
