Fix CSP eval error by adding unsafe-eval directive
- Add 'unsafe-eval' to script-src directive in CSP headers
- This allows setTimeout/setInterval functions to work properly
- Fixes Content Security Policy blocking JavaScript execution
- Applied to all main pages (index, collection, calligraphy-painting)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';">
     <title>讀畫樓 - 东方美韵艺术画廊</title>
     <meta name="description" content="展现文化底蕴、深层精神追求，跨越历史长河展示东方美韵的藝術畫廊">
     <link rel="stylesheet" href="css/reset.css">
